# gobot

./: .gitignore  Dockerfile  bot_v_bot.py  pyproject.toml  scoring.py
.cursor/rules/: base.mdc
agents/: base.py  helpers.py  minimax.py  naive.py
gobot/: goboard.py  goboard_slow.py  gotypes.py  zobrist.py
src/: bot_v_bot.py  download_kgs.py  encode.py  generate_mcts_games.py  launch_gtp.py  mcts.py  metadata.py  models.py  parse_sgf.py  predict.py  processor.py  replay.py  sample.py  train.py
src/agents/: deep_learning_agent.py  helpers.py  mcts_agent.py  minimax.py  naive.py
src/deep/: layer.py  loss.py  network.py  sigmoid.py
src/encoders/: base.py  oneplane.py
src/go/: goboard.py  gotypes.py  scoring.py  zobrist.py
src/gtp/: commands.py
src/sgf/: grammar.md  parser.py  test_parser.py  test_tokenizer.py  tokenizer.py
src/utils/: fileinfo.py  json_decoders.py  json_encoders.py  print.py
tests/: board1.txt  board2.txt  conftest.py  test_go_string.py  test_minimax_agent.py
tests/agents/: test_helpers.py  test_mcts_agent.py
tests/board/: board1-expected.txt  board1.txt  board4.txt  conftest.py  test_board_capture.py  test_capture.py  test_capture1.py  test_legal_moves.py
tests/board/data/: board2-expected.txt  board3-expected.txt
tests/data/: board-eyes.txt  board2.txt  board3.txt  board5.txt
tests/game_state/: test_is_valid_move.py
