[project]
name = "gobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "furl>=2.1.4",
    "httpx>=0.28.1",
    "keras>=3.9.0",
    "numpy~=1.26.4",
    "tensorflow>=2.18.0",
    "typer>=0.15.2",
]
