[project]
name = "gobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "furl>=2.1.4",
    "httpx>=0.28.1",
    "keras>=3.9.0",
    "numpy~=1.26.4",
    "tensorflow-metal>=1.2.0 ; sys_platform == 'darwin'",
    "tensorflow>=2.18.1",
    "typer>=0.19.2",
    "tensorflow[and-cuda]>=2.18.1 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
]
